--- a/frontend/less/constants.less
+++ b/frontend/less/constants.less
@@ -1,5 +1,6 @@
 @bulma-mobile: 768px;
 @bulma-tablet: 1023px;
 
-@bulma-success: #20bc56;
-@bulma-failure: #20bc56;
+@bulma-success: hsl(141, 71%, 48%);
+@bulma-failure: hsl(348, 100%, 61%);
+@bulma-warn: hsl(48, 100%, 67%);
