working deposit page

--- a/frontend/less/index.less
+++ b/frontend/less/index.less
@@ -5,6 +5,10 @@
 @import (less) './constants.less';
 @import (less) './components/index.less';
 
+input.eth_address {
+    font-family: monospace;
+}
+
 @media screen and (max-width: @bulma-mobile) {
     .navbar {
         #wallet-widget {
