quick withdraw page

--- a/frontend/less/index.less
+++ b/frontend/less/index.less
@@ -4,6 +4,7 @@
 @import (less) '../node_modules/bulma/css/bulma.css';
 @import (less) './constants.less';
 @import (less) './components/index.less';
+@import (less) './routes/index.less';
 
 input.eth_address {
     font-family: monospace;
