immediate mix button in countdown page

--- a/frontend/less/index.less
+++ b/frontend/less/index.less
@@ -10,6 +10,10 @@ input.eth_address {
     font-family: monospace;
 }
 
+.first-section {
+    padding-top:2em;
+}
+
 @media screen and (max-width: @bulma-mobile) {
     .navbar {
         #wallet-widget {
