improved text with browser reqs on deposit page

--- a/frontend/less/index.less
+++ b/frontend/less/index.less
@@ -12,6 +12,7 @@ input.eth_address {
 
 .first-section {
     padding-top:2em;
+    padding-bottom:0em;
 }
 
 @media screen and (max-width: @bulma-mobile) {
