UI support for tokens

--- a/frontend/less/routes/deposit.less
+++ b/frontend/less/routes/deposit.less
@@ -1,3 +1,20 @@
 .titles {
     padding-top:2em;
 }
+
+.sendTo {
+    span {
+        margin-right:0.4em;
+        margin-left:0.4em;
+        position:relative;
+        top: 0.4em;
+    }
+}
+
+.token-select{
+    display:inline;
+
+    label {
+        margin-right: 1em;
+    }
+}
